# ICRQE

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  run.py
.run/: main.run.xml  run.run.xml
scripts/: run.py
src/backend/: main.py  plantuml_generator.py  qa_system.py  repo_parser.py
src/frontend/src/: App.js
