[project]
name = "icrqe"
version = "0.1.0"
description = "Intelligent Code Review for Quality Enhancement"
authors = [
    {name = "Kritika Datar",email = "kritikadatarss@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astunparse (==1.6.3)",
    "numpy (==1.26.3)",
    "chromadb (==0.4.22)",
    "gitpython (==3.1.40)",
    "gradio (==5.11.0)",
    "openai (==1.64.0)",
    "pandas (==2.2.0)",
    "pygments (==2.17.2)",
    "pytest (==7.4.4)",
    "pytest-cov (==4.1.0)",
    "thefuzz (==0.20.0)",
    "torch (==2.5.0)",
    "transformers (==4.48.0)",
    "radon (==5.0.1)",
    "pyyaml (>=6.0.2,<6.1.0)",
    "starcoder (>=0.0.2,<0.1.0)",
    "click (>=8.1.8,<8.2.0)",
    "tqdm (>=4.67.1,<4.68.0)",
    "requests (>=2.32.3,<2.33.0)",
    "ruff (==0.2.2)",
    "halo (>=0.0.31,<0.1.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
